# almaT

./: .gitignore  CMakeLists.txt  cmake
almaT/: CMakeLists.txt  test.json
almaT/lib/: CMakeList.txt  CMakeLists.txt
almaT/script/linux/: download_lib.sh
almaT/script/windows/: copy.bat  create_virtual_env.bat  download_lib.bat
almaT/source/: almaT.cpp  almaT.h  almaT.ui  main.cpp  tableviewmodel.cpp  tableviewmodel.h
